--- a/style.css
+++ b/style.css
@@ -1662,6 +1662,19 @@ main.home > section.feeds > div.stories.new > .story .read-time {
   /* justify-content: center; */
 }
 
+main.home > section.feeds > div.stories.new > .story .read-time > span.sp {
+  display: inline-block;
+  margin: 0 0 -2px;
+  width: 4px;
+  height: 4px;
+  background-color: #6b7280;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
 main.home > section.feeds > div.stories.new > .story h3.title {
   /* border: 1px solid #000000; */
   color: #53595f;
