--- a/style.css
+++ b/style.css
@@ -1625,11 +1625,13 @@ main.home > section.popular > div.side > ul.topics > li.topic a.link:hover {
 
 
 main.home > section.feeds {
+  /* border: 1px solid #000000; */
+  padding: 0;
   margin: 15px 0;
   display: grid;
   grid-template-columns: 5fr 3fr;
   justify-content: space-between;
-  gap: 20px;
+  gap: 30px;
 }
 
 main.home > section.feeds > div.stories.new {
@@ -2152,6 +2154,16 @@ main.home > section.feeds > div.stories.new > .story form.reply > button {
 
 main.home > section.feeds > div.people {
   /* border: 1px solid #000000; */
+  background-color: var(--background);
+  padding: 0;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+
+main.home > section.feeds > div.people > .people-list {
+  /* border: 1px solid #000000; */
+  background-color: var(--background);
   padding: 0;
   display: flex;
   flex-flow: column;
@@ -2160,25 +2172,29 @@ main.home > section.feeds > div.people {
   top: 70px;
 }
 
-main.home > section.feeds > div.people > .title {
+main.home > section.feeds > div.people > .people-list .title {
   /* border: 1px solid #000000; */
   padding: 0;
   display: flex;
   flex-flow: column;
   gap: 0;
-  position: sticky;
-  top: 70px;
 }
 
-main.home > section.feeds > div.people > .title h4 {
+main.home > section.feeds > div.people > .people-list .title h4 {
   color: #1f2937;
   font-size: 1.3rem;
+  font-weight: 500;
 }
 
-main.home > section.feeds > div.people > .person {
+main.home > section.feeds > div.people > .people-list .title > span {
+  color: #6b7280;
+  font-size: 0.85rem;
+}
+
+main.home > section.feeds > div.people .person {
   border-right: 1px solid #6b728034;
   background-color: #e6e6e616;
-  padding: 8px 10px;
+  padding: 8px 10px 8px 0px;
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -2187,7 +2203,7 @@ main.home > section.feeds > div.people > .person {
   /* border-radius: 10px; */
 }
 
-main.home > section.feeds > div.people > .person > .head {
+main.home > section.feeds > div.people .person > .head {
   /* border: 1px solid #6b7280; */
   padding: 0;
   margin: 0;
@@ -2197,7 +2213,7 @@ main.home > section.feeds > div.people > .person > .head {
   gap: 10px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .image {
+main.home > section.feeds > div.people .person > .head > .image {
   /* border: 1px solid #6b7280; */
   padding: 0;
   display: flex;
@@ -2213,7 +2229,7 @@ main.home > section.feeds > div.people > .person > .head > .image {
   -o-border-radius: 50px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .image img {
+main.home > section.feeds > div.people .person > .head > .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -2224,7 +2240,7 @@ main.home > section.feeds > div.people > .person > .head > .image img {
   -o-border-radius: 50px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name {
+main.home > section.feeds > div.people .person > .head > .name {
   /* border: 1px solid #6b7280; */
   padding: 0;
   display: flex;
@@ -2234,7 +2250,7 @@ main.home > section.feeds > div.people > .person > .head > .name {
   position: relative;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid  .profile {
+main.home > section.feeds > div.people .person > .head > .name h4.uid  .profile {
   border: 1px solid #83858442;
   box-shadow: 0 12px 48px #6d758d33;
   padding: 0px 10px 10px;
@@ -2256,11 +2272,11 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid  .profil
   -o-transition: all 100ms ease-out;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid:hover .profile {
+main.home > section.feeds > div.people .person > .head > .name h4.uid:hover .profile {
   display: flex;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile > span.pointer {
+main.home > section.feeds > div.people .person > .head > .name h4.uid .profile > span.pointer {
   border: 1px solid #83858442;
   border-bottom: none;
   border-right: none;
@@ -2279,7 +2295,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile
   -o-border-radius: 1px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile > .head {
+main.home > section.feeds > div.people .person > .head > .name h4.uid .profile > .head {
   /* border: 1px solid #000000; */
   background-color: var(--background);
   display: flex;
@@ -2288,7 +2304,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile
   gap: 10px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile > .head > .image {
+main.home > section.feeds > div.people .person > .head > .name h4.uid .profile > .head > .image {
   /* border: 1px solid #000000; */
   width: 40px;
   height: 40px;
@@ -2300,7 +2316,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile
   -o-border-radius: 50px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile > .head > .image img {
+main.home > section.feeds > div.people .person > .head > .name h4.uid .profile > .head > .image img {
   /* border: 1px solid #000000; */
   width: 100%;
   height: 100%;
@@ -2313,14 +2329,14 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid .profile
   -o-border-radius: 50px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .info {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .info {
   /* border: 1px solid #000000; */
   display: flex;
   flex-flow: column;
   /* align-items: center; */
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .info p.name {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .info p.name {
   /* border: 1px solid #000000; */
   margin: 0;
   color: #53595f;
@@ -2331,7 +2347,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   gap: 5px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .info p.name svg {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .info p.name svg {
   /* border: 1px solid #000000; */
   margin: -2px 0 0;
   color: #08b86f;
@@ -2340,7 +2356,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   justify-content: center;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .info a.followers {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .info a.followers {
   /* border: 1px solid #000000; */
   text-decoration: none;
   margin: 0;
@@ -2353,11 +2369,11 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   gap: 5px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .info a.followers > span.no {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .info a.followers > span.no {
   font-family: var(--font-mono);
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .data {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .data {
   /* border: 1px solid #000000; */
   margin: 5px 0;
   display: flex;
@@ -2365,7 +2381,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   /* align-items: center; */
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .data > p.name {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .data > p.name {
   /* border: 1px solid #000000; */
   margin: 0;
   color: #53595f;
@@ -2375,7 +2391,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   line-height: 1.5;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile .data > span.bio {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile .data > span.bio {
   /* border: 1px solid #000000; */
   margin: 0;
   color: #6b7280;
@@ -2383,7 +2399,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   font-size: 0.9rem;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile span.action {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile span.action {
   border: 1px solid #6b72808e;
   margin: 10px 0 5px;
   padding: 6px 15px;
@@ -2402,7 +2418,7 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   -o-border-radius: 8px;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profile span.action.follow {
+main.home > section.feeds > div.people .person > .head > .name h4.uid > .profile span.action.follow {
   border: none;
   text-decoration: none;
   color: #ffffff;
@@ -2410,19 +2426,19 @@ main.home > section.feeds > div.people > .person > .head > .name h4.uid > .profi
   /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid {
+main.home > section.feeds > div.people .person > .head > .name h4.uid {
   color: #53595f;
   font-family: var(--font-mono);
   font-weight: 500;
   font-size: 1rem;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name h4.uid a {
+main.home > section.feeds > div.people .person > .head > .name h4.uid a {
   color: inherit;
   text-decoration: none;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name span.followers {
+main.home > section.feeds > div.people .person > .head > .name span.followers {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -2430,12 +2446,12 @@ main.home > section.feeds > div.people > .person > .head > .name span.followers 
   font-size: 0.9rem;
 }
 
-main.home > section.feeds > div.people > .person > .head > .name span.followers > span.no {
+main.home > section.feeds > div.people .person > .head > .name span.followers > span.no {
   font-family: var(--font-mono);
 }
 
 
-main.home > section.feeds > div.people > .person > .action {
+main.home > section.feeds > div.people .person > .action {
   border: 1px solid #6b72803f;
   color: #6b7280;
   padding: 3px 12px;
@@ -2453,7 +2469,7 @@ main.home > section.feeds > div.people > .person > .action {
   -o-border-radius: 8px;
 }
 
-main.home > section.feeds > div.people > .person > .action.follow {
+main.home > section.feeds > div.people .person > .action.follow {
   border: none;
   background-color: #1d2c38;
   /* background: linear-gradient(#53595f, #627ea0); */
@@ -2463,6 +2479,23 @@ main.home > section.feeds > div.people > .person > .action.follow {
   font-weight: 500;
 }
 
+main.home > section.feeds > div.people .more {
+  border: 1px solid #6b7280;
+  margin: 15px 0 0 0;
+  padding: 10px 0;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+main.home > section.feeds > div.people .more p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #53595f;
+}
 
 
 
