--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Author URL: https://femar.co.ke
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Sen:wght@400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
@@ -26,6 +26,7 @@ Author URL: https://femar.co.ke
 */
 :root {
   --font-main: "Inter", sans-serif;
+  --font-text: "DM Sans", sans-serif;
   --font-alt: "Sen", sans-serif;
   --scroll-bar-background: #DDDDD7;
   --scroll-bar-linear: linear-gradient(#53595f, #627ea0);
