--- a/res.css
+++ b/res.css
@@ -38,7 +38,7 @@
   }
 
   main.home > section.feeds {
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
     padding: 0;
     margin: 15px 0;
     display: flex;
