--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ Author URL: https://femar.co.ke
 :root {
   --font-main: "Inter";
   --font-text: "DM Sans";
-  --font-alt: "Sen";
-    --font-mono: 'Jetbrains Mono';
+  --font-mono: 'Jetbrains Mono';
   --scroll-bar-background: #DDDDD7;
   --scroll-bar-linear: linear-gradient(#53595f, #627ea0);
 
@@ -1300,7 +1299,7 @@ main.home > section.popular > div.stories {
   gap: 0;
 }
 
-main.home > section.popular > div.stories > a.trending-story {
+main.home > section.popular > div.stories > .trending-story {
   /* border: thin solid #6b728032; */
   text-decoration: none;
   height: max-content;
@@ -1312,17 +1311,10 @@ main.home > section.popular > div.stories > a.trending-story {
   flex-flow: column;
   align-items: center;
   justify-content: flex-end;
-  overflow: hidden;
-  /* background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20)); */
-  /* background: var(--accent-linear);
-  background-color: var(--accent-color);
-  background: linear-gradient(-45deg, #23a6d5, #21D029, #18A565, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 5s ease infinite;
-  -webkit-animation: gradient 5s ease infinite; */
+  gap: 5px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > span.no {
+main.home > section.popular > div.stories > .trending-story > span.no {
   /* border: thin solid #00ff00; */
   position: absolute;
   right: 10px;
@@ -1348,7 +1340,7 @@ main.home > section.popular > div.stories > a.trending-story > span.no {
 }
 
 
-main.home > section.popular > div.stories > a.trending-story > .info {
+main.home > section.popular > div.stories > .trending-story > .info {
   /* border: thin solid #00ff00; */
   width: 100%;
   /* overflow: hidden; */
@@ -1360,7 +1352,7 @@ main.home > section.popular > div.stories > a.trending-story > .info {
   padding: 15px 0;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > span.topic {
+main.home > section.popular > div.stories > .trending-story > .info > span.topic {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1375,24 +1367,28 @@ main.home > section.popular > div.stories > a.trending-story > .info > span.topi
   -webkit-background-clip: text;
   font-size: 1rem;
   padding: 0;
-  margin: 0 0 8px;
+  margin: 0;
   font-weight: 400;
-  font-family: var(--font-mono);
+  font-family: var(--font-text), sans-serif;
   border-radius: 20px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > h2.trending-title {
+main.home > section.popular > div.stories > .trending-story > .info > h2.trending-title {
   font-size: 1.2rem;
-  /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
-  font-family: var(--font-main) !important;
+  margin: 0;
+  font-family: var(--font-text) !important;
   /* color: var(--white-color); */
   color: var(--text-color);
   font-weight: 500;
   line-height: 1.4;
-  margin: 0 0 10px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > .meta {
+main.home > section.popular > div.stories > .trending-story > .info > h2.trending-title a {
+  text-decoration: none;
+  color: inherit;
+}
+
+main.home > section.popular > div.stories > .trending-story > .info > .meta {
   display: flex;
   /* color: #f5f5f5; */
   color: var(--gray-color);
@@ -1408,17 +1404,20 @@ main.home > section.popular > div.stories > .trending {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  align-items: end;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story {
+main.home > section.popular > div.stories > .trending > .trending-story {
   /* border: thin solid #6b7280; */
   text-decoration: none;
   height: max-content;
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1); */
+  padding: 10px 0 0 0;
+  height: max-content;
   width: 100%;
   position: relative;
   display: flex;
   flex-flow: column;
+  gap: 5px;
   align-items: center;
   justify-content: flex-end;
   overflow: hidden;
@@ -1427,20 +1426,17 @@ main.home > section.popular > div.stories > .trending > a.trending-story {
   background-size: cover;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story > span.no {
+main.home > section.popular > div.stories > .trending > .trending-story > span.no {
   /* border: thin solid #00ff00; */
   position: absolute;
   right: 10px;
-  /* z-index: 3; */
-  top: 10px;
+  top: 0px;
   height: 38px;
   width: 38px;
   font-weight: 700;
   font-size: 1.2rem;
   font-family: var(--font-mono);
-  /* color: var(--white-color); */
   color: transparent;
-  /* background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20)); */
   background: var(--accent-linear);
   background-clip: text;
   -webkit-background-clip: text;
@@ -1451,16 +1447,16 @@ main.home > section.popular > div.stories > .trending > a.trending-story > span.
   border-radius: 50px;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story > .info {
+main.home > section.popular > div.stories > .trending > .trending-story > .info {
   /* border: thin solid #00ff00; */
   width: 100%;
   z-index: 1;
   display: flex;
   flex-flow: column;
-  padding: 15px 0 0 0;
+  padding: 0;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story > .info > span.topic {
+main.home > section.popular > div.stories > .trending > .trending-story > .info > span.topic {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1474,21 +1470,26 @@ main.home > section.popular > div.stories > .trending > a.trending-story > .info
   font-size: 1rem;
   line-height: inherit;
   padding: 0;
-  margin: 0 0 8px;
+  margin: 0;
   font-weight: 500;
-  font-family: var(--font-alt);
+  font-family: var(--font-text), sans-serif;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story > .info > h2.trending-title {
-  font-family: var(--font-main) !important;
+main.home > section.popular > div.stories > .trending > .trending-story > .info > h2.trending-title {
+  font-family: var(--font-text), sans-serif;
   color: var(--text-color);
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 1.4;
-  margin: 0 0 5px;
+  margin: 0;
 }
 
-main.home > section.popular > div.stories > .trending > a.trending-story > .info > .meta {
+main.home > section.popular > div.stories > .trending > .trending-story > .info > h2.trending-title a {
+  text-decoration: none;
+  color: inherit;
+}
+
+main.home > section.popular > div.stories > .trending > .trending-story > .info > .meta {
   /* border: 1px solid #000000; */
   display: flex;
   color: var(--gray-color);
@@ -1512,7 +1513,7 @@ main.home > section.popular > div.side > .donate-card {
   /*background-color: #39383816;*/
   padding: 10px 0;
   width: 100%;
-  display: flex;
+  display: none;
   flex-flow: column;
   gap: 5px;
   /*border-radius: 10px;*/
@@ -1523,7 +1524,7 @@ main.home > section.popular > div.side > .donate-card h2 {
   color: #1f2937;
   line-height: 1.4;
   font-weight: 600;
-  font-family: var(--font-alt);
+  font-family: var(--font-text), sans-serif;
 }
 
 main.home > section.popular > div.side > .donate-card p {
